Fix Cat's vs dogs

--- a/views/index.html
+++ b/views/index.html
@@ -25,8 +25,8 @@
           </div>
           <div class="divider"></div>
           <div class="choice dogs">
-            <!-- <div class="label">Dogs</div> -->
-            <div class="label">Cats</div>
+            <div class="label">Dogs</div>
+            <!-- <div class="label">Cats</div> -->
             <div class="stat">{{bPercent | number:1}}%</div>
           </div>
         </div>
